<resources>
    <string name="app_name">MyAppp</string>
    <string name="sensor_test">SensorTest</string>
    <string name="stock">Stock</string>
    <string name="fragmenttest">FragmentTest</string>


    // stock activity
    <string name="action_settings">设置</string>
    <string name="action_delete">删除</string>
    <string name="button_add_label">添加</string>
    <string name="stock_name_title">名称</string>
    <string name="stock_now_title">最新</string>
    <string name="stock_increase_percent_title">涨幅</string>
    <string name="stock_increase_title">涨跌</string>
    <string name="stock_sh_name">上证指数</string>
    <string name="stock_sz_name">深圳成指</string>
    <string name="stock_chuang_name">创业板指</string>
    <string name="stock_buy">买</string>
    <string name="stock_sell">卖</string>

    // sensor activity
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="sensortest_logo">"sensortest"</string>


    //clock
    <string name="clock">ClockActivity</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>

    //test
    <string name="test">test</string>
    <string name="describle">Thanks for choosing our awesome blend tea. How do you want it serving?</string>
    <string name="temperature">Temperature:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
