<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sinnor.test.SensorTestActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/sensortest_logo"
        android:contentDescription="@string/sensortest_logo"/>

    <ListView
        android:id="@+id/list_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ToggleButton android:id="@+id/view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/btn_start"
        android:textOff="@string/btn_stop"
        android:layout_gravity="bottom|end|right" />


</LinearLayout >
